--- a/full-chrome-plugin-demo/popup.html
+++ b/full-chrome-plugin-demo/popup.html
@@ -21,6 +21,7 @@
     <div>
       <input type="button" id="open_url_current_tab" value="打开京东登录" />
       <input type="button" id="open_url_new_tab" value="打卡京东后台" />
+      <input type="button" id="send_message_to_content_script" value="更新图片" />
       <br />
       <input type="button" id="get_current_tab_id" value="获取当前标签页ID" />
       <input type="button" id="highlight_tab" value="切换到第一个标签" />
@@ -38,11 +39,7 @@
       <a href="#" id="get_background_title">获取background页的标题</a>
       <a href="#" id="set_background_title">设置background页标题</a> -->
     </div>
-    <!-- <h2>popup与content-script交互</h2>
-    <div>
-      <a href="#" id="send_message_to_content_script">短连接发送消息到content-script</a>
-      <a href="#" id="connect_to_content_script">长连接发送消息到content-script</a>
-    </div>
+    <!--
     <h2>DOM交互演示</h2>
     <div>
       <a href="#" id="update_bg_color">修改页面背景色(通过executeScript实现)</a>
